--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -112,12 +112,13 @@ device:epic-mouse-v1 {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+$mainModShift = SUPER_SHIFT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive,
 bind = $mainMod, escape, exit,
-bind = $mainMod, W, exec, qutebrowser
+bind = $mainModShift, W, exec, qutebrowser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
