--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -15,6 +15,13 @@ monitor=eDP-1,1920x1080@60,0x0,1
 
 # Execute your favorite apps at launch
 exec-once = waybar & hyprpaper
+exec-once = pasystray
+exec-once = playerctld
+exec-once = blueman-applet
+exec-once = nm-applet --indicator
+exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
+exec-once = xset r rate 200 35 
+exec-once = numlockx 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -24,10 +31,10 @@ env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us,es
     kb_variant =
-    kb_model =
-    kb_options =
+    kb_model = pc104
+    kb_options = grp:alt_space_toggle,caps:swapescape,eurosign:e
     kb_rules =
 
     follow_mouse = 1
@@ -112,23 +119,29 @@ device:epic-mouse-v1 {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
-$mainModShift = SUPER_SHIFT
+$myterm = kitty
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, RETURN, exec, $myterm --working-directory $($HOME/.dotfiles/bin/wcwd) 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, escape, exit,
-bind = $mainModShift, W, exec, qutebrowser
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, T, togglefloating,
+
+bind = $mainMod SHIFT, W, exec, qutebrowser
+bind = $mainMod CONTROL, W, exec, firefox
+bind = $mainMod, Z, exec, rofi -show drun -config $($HOME/.dotfiles/bin/rofi-config)
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
+bind = $mainMod, L, movefocus, l
 bind = $mainMod, right, movefocus, r
+bind = $mainMod, H, movefocus, r
 bind = $mainMod, up, movefocus, u
+bind = $mainMod, K, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
