--- a/i3/config
+++ b/i3/config
@@ -70,6 +70,10 @@ bindsym $mod+Shift+s exec $HOME/.dotfiles/bin/ambientsound
 # GUI VIM
 bindsym $mod+Shift+e exec neovide
 
+# SETUP KEYBOARD
+bindsym $mod+Control+k exec $HOME/.dotfiles/X/kbsetup && notify-send "Keyboard configured"
+
+
 
 bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 
