--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,7 +10,7 @@ disable_ligatures       always
 scrollback_lines        50000
 scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER 
 allow_remote_control    yes
-listen_on               unix:~/temp/kitty
+listen_on               unix:/tmp/kitty
 enabled_layouts         all
 
 include                 ~/.cache/wal/colors-kitty.conf
