--- a/i3/config
+++ b/i3/config
@@ -185,6 +185,7 @@ bindsym --release $mod+Print exec import $HOME/Pictures/Screenshots/screenshot_$
 # Start Applications
 bindsym $mod+Shift+w exec qutebrowser
 bindsym $mod+Control+w exec firefox
+bindsym $mod2+w exec thorium-browser
 bindsym $mod+Shift+t exec thunderbird-beta
 bindsym $mod+Shift+f exec "$myterm --class=wm-floating,wm-floating lf `$HOME/.dotfiles/bin/xcwd`"
 bindsym $mod+Control+n exec "dunstctl action"
@@ -241,6 +242,8 @@ bindsym $mod+Shift+0 move container to workspace $ws0
 
 # default workspaces
 assign [class="qutebrowser"] $ws2
+assign [class="Thorium-browser"] $ws2
+assign [class="firefox"] $ws2
 assign [class="thunderbird"] $ws3
 assign [class="thunderbird-beta"] $ws3
 assign [class="Mail"] $ws3
