feat: almost complete hyprland config.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -8,12 +8,15 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=,preferred,auto,auto
 monitor=eDP-1,1920x1080@60,0x0,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once = dunst
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar & hyprpaper
 exec-once = pasystray
 exec-once = playerctld
@@ -22,6 +25,8 @@ exec-once = nm-applet --indicator
 exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 exec-once = xset r rate 200 35 
 exec-once = numlockx 
+exec-once = hyprpaper
+exec-once = mpDris2
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -36,6 +41,8 @@ input {
     kb_model = pc104
     kb_options = grp:alt_space_toggle,caps:swapescape,eurosign:e
     kb_rules =
+    repeat_delay = 300
+    repeat_rate = 50
 
     follow_mouse = 1
 
@@ -62,10 +69,6 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
 
     drop_shadow = true
     shadow_range = 4
@@ -80,12 +83,12 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows, 1, 4, myBezier
+    animation = windowsOut, 1, 4, default, popin 80%
+    animation = border, 1, 4, default
+    animation = borderangle, 1, 4, default
+    animation = fade, 1, 4, default
+    animation = workspaces, 1, 4, default
 }
 
 dwindle {
@@ -116,6 +119,20 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+# Applications to workspaces with window rules
+windowrule = workspace 2, ^(.*qutebrowser.*)$
+windowrule = workspace 2, ^(.*firefox.*)$
+windowrule = workspace 2, ^(.*Thorium-browser.*)$
+windowrule = workspace 3, ^(.*Thunderbird.*)$
+windowrule = workspace 3, ^(.*thunderbird-beta.*)$
+windowrule = workspace 3, ^(.*Mail.*)$
+windowrule = workspace 5, ^(.*steam.*)$
+windowrule = workspace 5, ^(.*steamwebhelper.*)$
+windowrule = workspace 6, ^(.*FreeTube.*)$
+windowrule = workspace 9, ^(.*zoom.*)$
+windowrule = workspace 9, ^(.*telegram-desktop.*)$
+windowrule = workspace 9, ^(.*discord.*)$
+windowrule = workspace 9, ^(.*Signal.*)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -129,9 +146,9 @@ bind = $mainMod, T, togglefloating,
 
 bind = $mainMod SHIFT, W, exec, qutebrowser
 bind = $mainMod CONTROL, W, exec, firefox
+bind = $mainMod SHIFT, T, exec, thunderbird-beta
 bind = $mainMod, Z, exec, rofi -show drun -config $($HOME/.dotfiles/bin/rofi-config)
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -142,6 +159,13 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, J, movefocus, d
+bind = $mainMod, F, fullscreen
+
+# Move windows
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
