feat: config files for lots of stuff.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -147,7 +147,8 @@ bind = $mainMod, T, togglefloating,
 bind = $mainMod SHIFT, W, exec, qutebrowser
 bind = $mainMod CONTROL, W, exec, firefox
 bind = $mainMod SHIFT, T, exec, thunderbird-beta
-bind = $mainMod, Z, exec, rofi -show drun -config $($HOME/.dotfiles/bin/rofi-config)
+bind = $mainMod, Z, exec, fuzzel
+bind = $mainMod SHIFT, Z, exec, $HOME/.dotfiles/bin/slock
 bind = $mainMod, P, pseudo, # dwindle
 
 # Move focus with mainMod + arrow keys
