--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -120,6 +120,10 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Applications to workspaces with window rules
+windowrule = float,^(wm-floating)$
+windowrule = float,^(wm-floating-big)$
+windowrule = size 1680 920,^(wm-floating-big)$
+windowrule = center,^(wm-floating-big)$
 windowrule = workspace 2, ^(.*qutebrowser.*)$
 windowrule = workspace 2, ^(.*firefox.*)$
 windowrule = workspace 2, ^(.*Thorium-browser.*)$
@@ -141,7 +145,7 @@ $myterm = kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $myterm --working-directory $($HOME/.dotfiles/bin/wcwd) 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, escape, exit,
+bind = $mainMod, escape, exec, tschuss
 bind = $mainMod, T, togglefloating,
 
 bind = $mainMod SHIFT, W, exec, qutebrowser
@@ -199,3 +203,27 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Screenshots
+bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+
+# Media player
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+bind = $mainMod CONTROL, M, exec, kitty --class=wm-floating-big ncmpcpp
+bind = $mainMod CONTROL, P, exec, playerctl play-pause
+bind = $mainMod CONTROL, S, exec, playerctl stop
+bind = $mainMod CONTROL, Z, exec, mpc random
+bind = $mainMod CONTROL, period, exec, playerctl next
+bind = $mainMod CONTROL, comma, exec, playerctl previous
+
+# Monitor off
+bind = $mainMod, F8, exec, swayidle -w timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' 
+
+# Applications
+bind = $mainMod SHIFT, E, exec, neovide
+bind = $mainMod SHIFT, S, exec, $HOME/.dotfiles/bin/ambientsound
