--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/tsagrista/Pictures/wallpaper.jpg
-wallpaper = eDP-1,/home/tsagrista/Pictures/wallpaper.jpg
+preload = ~/Pictures/wallpaper.jpg
+wallpaper = eDP-1,~/Pictures/wallpaper.jpg
