--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -17,7 +17,8 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # Execute your favorite apps at launch
 exec-once = dunst
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar & hyprpaper
+exec-once = hyprpaper
+exec-once = waybar
 exec-once = pasystray
 exec-once = playerctld
 exec-once = blueman-applet
@@ -25,7 +26,6 @@ exec-once = nm-applet --indicator
 exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 exec-once = xset r rate 200 35 
 exec-once = numlockx 
-exec-once = hyprpaper
 exec-once = mpDris2
 
 # Source a file (multi-file configs)
