feat: more hyprland.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = numlockx
 exec-once = mpDris2
 
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+# source = ~/.config/hypr/macaroni.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -59,8 +59,8 @@ general {
     gaps_in = 3
     gaps_out = 10
     border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(476a9ffe)
+    col.inactive_border = rgba(666666aa)
 
     layout = dwindle
 }
@@ -68,7 +68,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 8
 
     drop_shadow = true
     shadow_range = 4
@@ -213,13 +213,19 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+bind = $mainMod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+bind = $mainMod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
 bind = $mainMod CONTROL, M, exec, kitty --class=wm-floating-big ncmpcpp
 bind = $mainMod CONTROL, P, exec, playerctl play-pause
 bind = $mainMod CONTROL, S, exec, playerctl stop
 bind = $mainMod CONTROL, Z, exec, mpc random
 bind = $mainMod CONTROL, period, exec, playerctl next
 bind = $mainMod CONTROL, comma, exec, playerctl previous
+
+# Brightness
+bind = , XF86MonBrightnessUp, exec, brightness+
+bind = , XF86MonBrightnessDown, exec, brightness-
 
 # Monitor off
 bind = $mainMod, F8, exec, swayidle -w timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' 
