feat: separate hyprland configurations.

--- a/hyprland/hyprland-base.conf
+++ b/hyprland/hyprland-base.conf
@@ -32,6 +32,7 @@ exec-once = mpDris2
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = XDG_SESSION_TYPE,wayland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
