--- a/tschuss/tschuss.conf
+++ b/tschuss/tschuss.conf
@@ -43,7 +43,7 @@ logout: {
         height = 64;
     };
     description = "Logout";
-    action = "logout";
+    action = "hyprctl dispatch exit";
     bind = 108;     // 'l'
 };
 
