--- a/hyprland/hyprland-base.conf
+++ b/hyprland/hyprland-base.conf
@@ -10,7 +10,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -33,6 +32,11 @@ exec-once = mpDris2
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
+
+# Stupid anime wallpaper
+misc {
+    disable_hyprland_logo = true
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
