--- a/hyprland/hyprland-base.conf
+++ b/hyprland/hyprland-base.conf
@@ -36,6 +36,7 @@ env = XDG_SESSION_TYPE,wayland
 # Stupid anime wallpaper
 misc {
     disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
