feat: use hyprcwd to open terminal.

--- a/hyprland/hyprland-base.conf
+++ b/hyprland/hyprland-base.conf
@@ -148,7 +148,7 @@ $mainMod = SUPER
 $myterm = kitty
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $myterm --working-directory $($HOME/.dotfiles/bin/wcwd) 
+bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, escape, exec, tschuss
 bind = $mainMod, T, togglefloating,
@@ -221,7 +221,7 @@ bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 bind = $mainMod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
 bind = $mainMod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bind = $mainMod CONTROL, M, exec, kitty --class=wm-floating-big ncmpcpp
+bind = $mainMod CONTROL, M, exec, $myterm --class=wm-floating-big ncmpcpp
 bind = $mainMod CONTROL, P, exec, playerctl play-pause
 bind = $mainMod CONTROL, S, exec, playerctl stop
 bind = $mainMod CONTROL, Z, exec, mpc random
