--- a/waybar/config
+++ b/waybar/config
@@ -18,7 +18,7 @@
     },
     "hyprland/workspaces": {
       "disable-scroll": true,
-      "all-outputs": true,
+      "all-outputs": false,
       "on-click": "activate", 
       "format": "{icon}",
       "format-icons": {
