--- a/hyprland/hyprland-base.conf
+++ b/hyprland/hyprland-base.conf
@@ -135,6 +135,7 @@ windowrule = workspace 2, ^(.*Thorium-browser.*)$
 windowrule = workspace 3, ^(.*Thunderbird.*)$
 windowrule = workspace 3, ^(.*thunderbird-beta.*)$
 windowrule = workspace 3, ^(.*Mail.*)$
+windowrule = workspace 4, ^(.*jetbrains-idea-ce.*)$
 windowrule = workspace 5, ^(.*steam.*)$
 windowrule = workspace 5, ^(.*steamwebhelper.*)$
 windowrule = workspace 6, ^(.*FreeTube.*)$
