--- a/hyprland/hyprland-hidalgo.conf
+++ b/hyprland/hyprland-hidalgo.conf
@@ -7,12 +7,14 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+env = GDK_SCALE,1
+env = QT_SCALE_FACTOR,1
 
 # Source base file
 source = ~/.dotfiles/hyprland/hyprland-base.conf
 
 # This is for qutebrowser
-unbind = $mainMod SHIFT, W
-bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser
+#unbind = $mainMod SHIFT, W
+#bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser
 # Overwrite stuff
 env = XCURSOR_SIZE,35
