feat: reshuffle hyprland config files.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -10,7 +10,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -32,6 +31,13 @@ exec-once = mpDris2
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = XDG_SESSION_TYPE,wayland
+
+# Stupid anime wallpaper
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -129,6 +135,7 @@ windowrule = workspace 2, ^(.*Thorium-browser.*)$
 windowrule = workspace 3, ^(.*Thunderbird.*)$
 windowrule = workspace 3, ^(.*thunderbird-beta.*)$
 windowrule = workspace 3, ^(.*Mail.*)$
+windowrule = workspace 4, ^(.*jetbrains-idea-ce.*)$
 windowrule = workspace 5, ^(.*steam.*)$
 windowrule = workspace 5, ^(.*steamwebhelper.*)$
 windowrule = workspace 6, ^(.*FreeTube.*)$
@@ -142,7 +149,7 @@ $mainMod = SUPER
 $myterm = kitty
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $myterm --working-directory $($HOME/.dotfiles/bin/wcwd) 
+bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, escape, exec, tschuss
 bind = $mainMod, T, togglefloating,
@@ -215,7 +222,7 @@ bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 bind = $mainMod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
 bind = $mainMod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bind = $mainMod CONTROL, M, exec, kitty --class=wm-floating-big ncmpcpp
+bind = $mainMod CONTROL, M, exec, $myterm --class=wm-floating-big ncmpcpp
 bind = $mainMod CONTROL, P, exec, playerctl play-pause
 bind = $mainMod CONTROL, S, exec, playerctl stop
 bind = $mainMod CONTROL, Z, exec, mpc random
