--- a/hyprland/hyprland-hidalgo.conf
+++ b/hyprland/hyprland-hidalgo.conf
@@ -2,16 +2,11 @@
 monitor=DVI-D-1,1920x1080@60,0x0,1
 monitor=DP-1,3860x2560@60,1920x0,2
 
-# Environment
-env = LIBVA_DRIVER_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
 env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
 
-# Source base file
-source = ~/.dotfiles/hyprland/hyprland-base.conf
+# Source nvidia file
+source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # This is for qutebrowser
 #unbind = $mainMod SHIFT, W
