--- a/hyprland/hyprland-hidalgo.conf
+++ b/hyprland/hyprland-hidalgo.conf
@@ -10,6 +10,6 @@ source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # This is for qutebrowser
 #unbind = $mainMod SHIFT, W
-#bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser
+#bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
 # Overwrite stuff
 env = XCURSOR_SIZE,35
