--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -6,3 +6,7 @@ env = WLR_NO_HARDWARE_CURSORS,1
 
 # Source base file
 source = ~/.dotfiles/hyprland/hyprland.conf
+
+# Disable GPU in qutebrowser
+unbind = $mainMod SHIFT, W
+bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
