feat: more more on hypr.

--- a/hyprland/hyprland-simian.conf
+++ b/hyprland/hyprland-simian.conf
@@ -1,3 +1,5 @@
+# Configure laptop screen
 monitor=eDP-1,1920x1080@60,0x0,1
 
+# Source the base configuration
 source = ~/.dotfiles/hyprland/hyprland.conf
