--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -26,9 +26,6 @@ exec-once = xset r rate 200 35
 exec-once = numlockx 
 exec-once = mpDris2
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/macaroni.conf
-
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
@@ -76,25 +73,24 @@ decoration {
     rounding = 8
 
     drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow_range = 6
+    shadow_render_power = 5
+    shadow_ignore_window = true
+    col.shadow = rgba(1a1a1aaa)
+    shadow_offset = 4 4
+    blur {
+        enabled = yes
+        size = 6
+        passes = 3
+        new_optimizations = on
+        ignore_opacity = on
+        xray = true
+    }
 }
 
-animations {
-    enabled = true
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 4, myBezier
-    animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 4, default
-    animation = borderangle, 1, 4, default
-    animation = fade, 1, 4, default
-    animation = workspaces, 1, 4, default
-}
+# Animations. Source either animations-fancy or animations-base
+source = ~/.config/hypr/animations-fancy.conf
+#source = ~/.config/hypr/animations-base.conf
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -119,124 +115,8 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# Window rules
+source = ~/.config/hypr/windowrules.conf
 
-# Applications to workspaces with window rules
-windowrule = float,^(wm-floating)$
-windowrule = float,^(wm-floating-big)$
-windowrule = size 1680 920,^(wm-floating-big)$
-windowrule = center,^(wm-floating-big)$
-windowrule = workspace 2, ^(.*qutebrowser.*)$
-windowrule = workspace 2, ^(.*firefox.*)$
-windowrule = workspace 2, ^(.*Thorium-browser.*)$
-windowrule = workspace 3, ^(.*Thunderbird.*)$
-windowrule = workspace 3, ^(.*thunderbird-beta.*)$
-windowrule = workspace 3, ^(.*Mail.*)$
-windowrule = workspace 4, ^(.*jetbrains-idea-ce.*)$
-windowrule = workspace 5, ^(.*steam.*)$
-windowrule = workspace 5, ^(.*steamwebhelper.*)$
-windowrule = workspace 6, ^(.*FreeTube.*)$
-windowrule = workspace 9, ^(.*zoom.*)$
-windowrule = workspace 9, ^(.*telegram-desktop.*)$
-windowrule = workspace 9, ^(.*discord.*)$
-windowrule = workspace 9, ^(.*Signal.*)$
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-$myterm = kitty
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
-bind = $mainMod, Q, killactive,
-bind = $mainMod, escape, exec, tschuss
-bind = $mainMod, T, togglefloating,
-
-bind = $mainMod SHIFT, W, exec, qutebrowser
-bind = $mainMod CONTROL, W, exec, firefox
-bind = $mainMod SHIFT, T, exec, thunderbird-beta
-bind = $mainMod, Z, exec, fuzzel
-bind = $mainMod SHIFT, Z, exec, $HOME/.dotfiles/bin/slock
-bind = $mainMod, P, pseudo, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, L, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, H, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, J, movefocus, d
-bind = $mainMod, F, fullscreen
-
-# Move windows
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Screenshots
-bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
-
-# Media player
-bind = , XF86AudioPrev, exec, playerctl previous
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
-bind = $mainMod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bind = $mainMod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bind = $mainMod CONTROL, M, exec, $myterm --class=wm-floating-big ncmpcpp
-bind = $mainMod CONTROL, P, exec, playerctl play-pause
-bind = $mainMod CONTROL, S, exec, playerctl stop
-bind = $mainMod CONTROL, Z, exec, mpc random
-bind = $mainMod CONTROL, period, exec, playerctl next
-bind = $mainMod CONTROL, comma, exec, playerctl previous
-
-# Brightness
-bind = , XF86MonBrightnessUp, exec, brightness+
-bind = , XF86MonBrightnessDown, exec, brightness-
-
-# Monitor off
-bind = $mainMod, F8, exec, swayidle -w timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' 
-
-# Applications
-bind = $mainMod SHIFT, E, exec, neovide
-bind = $mainMod SHIFT, S, exec, $HOME/.dotfiles/bin/ambientsound
+# Bindings
+source = ~/.config/hypr/bindings.conf
