--- a/tschuss/tschuss.conf
+++ b/tschuss/tschuss.conf
@@ -16,9 +16,9 @@ shutdown: {
         width = 64;
         height = 64;
     };
-    description = "Shutdown";
+    description = "shutDown";
     action = "shutdown now";
-    bind = 115;     // 's'
+    bind = 100;     // 'd'
 };
 
 reboot: {
@@ -42,9 +42,9 @@ logout: {
         width = 64;
         height = 64;
     };
-    description = "Logout";
+    description = "lOgout";
     action = "hyprctl dispatch exit";
-    bind = 108;     // 'l'
+    bind = 111;     // 'o'
 };
 
 hibernate: {
@@ -68,7 +68,7 @@ suspend: {
         width = 64;
         height = 64;
     };
-    description = "Suspend";
+    description = "sUspend";
     action = "systemctl suspend";
     bind = 117;     // 'u'
 };  
@@ -83,5 +83,5 @@ lock: {
     };
     description = "Lock";
     action = "swaylock";
-    bind = 107;     // 'k'
+    bind = 108;     // 'l'
 };
