feat: style waybar.

--- a/waybar/config
+++ b/waybar/config
@@ -2,7 +2,7 @@
   "position": "top", // Waybar position (top|bottom|left|right)
   "layer": "top",
   "height": 27, // Waybar height (to be removed for auto height)
-  "spacing": 5, // Gaps between modules (4px)
+  "spacing": 5, // Gaps between modules (px)
   // Choose the order of the modules
   "modules-left": ["hyprland/workspaces", "sway/workspaces", "sway/mode", "hyprland/window", "custom/media"],
   "modules-center": [],
