feat: add mod+F8 to toggle screen off.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -25,6 +25,8 @@ exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 exec-once = xset r rate 200 35 
 exec-once = numlockx 
 exec-once = mpDris2
+# Turn off screen after 5 minutes
+exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl dispatch dpms on"
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
