feat: adapt visual settings (gaps, shadows, etc.) and disable scaling via xwayland.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -32,10 +32,15 @@ exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl 
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
 
-# Stupid anime wallpaper
+# Remove stupid anime wallpaper
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
+}
+
+# Do not scale xwayland windows
+xwayland {
+  force_zero_scaling = true
 }
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -61,7 +66,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 3
-    gaps_out = 10
+    gaps_out = 8
     border_size = 2
     col.active_border = rgba(5984ffff)
     col.inactive_border = rgba(666666aa)
@@ -75,18 +80,18 @@ decoration {
     rounding = 8
 
     drop_shadow = true
-    shadow_range = 6
-    shadow_render_power = 5
+    shadow_range = 4
+    shadow_render_power = 1
     shadow_ignore_window = true
     col.shadow = rgba(1a1a1aaa)
-    shadow_offset = 4 4
+    shadow_offset = 3 3
     blur {
         enabled = yes
         size = 6
         passes = 3
-        new_optimizations = on
+        new_optimizations = yes
         ignore_opacity = on
-        xray = true
+        xray = false
     }
 }
 
