--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -17,14 +17,14 @@ bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyp
   bind = $mainMod SHIFT, P, pseudo, # dwindle
 
 # Move focus with mainMod + arrow keys
+  bind = $mainMod, H, movefocus, l
   bind = $mainMod, left, movefocus, l
-  bind = $mainMod, L, movefocus, l
+  bind = $mainMod, L, movefocus, r
   bind = $mainMod, right, movefocus, r
-  bind = $mainMod, H, movefocus, r
-  bind = $mainMod, up, movefocus, u
   bind = $mainMod, K, movefocus, u
-  bind = $mainMod, down, movefocus, d
+  bind = $mainMod, up, movefocus, u
   bind = $mainMod, J, movefocus, d
+  bind = $mainMod, down, movefocus, d
   bind = $mainMod, F, fullscreen
 
 # Move windows
