--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -45,6 +45,18 @@ bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyp
   bind = $mainMod, 9, workspace, 9
   bind = $mainMod, 0, workspace, 10
 
+# Scratchpad
+  bind = $mainMod SHIFT, M, movetoworkspacesilent, special
+  bind = $mainMod, M, togglespecialworkspace
+
+# Move active workspace to monitor to the left/right
+  bind = $mainMod, P, movecurrentworkspacetomonitor, r
+  bind = $mainMod, O, movecurrentworkspacetomonitor, l
+
+# Move active window to workspace to the left/right
+  bind = $mainMod SHIFT, P, movetoworkspace, +1
+  bind = $mainMod SHIFT, O, movetoworkspace, -1
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
   bind = $mainMod SHIFT, 1, movetoworkspace, 1
   bind = $mainMod SHIFT, 2, movetoworkspace, 2
