--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyp
   bind = $mainMod CONTROL, W, exec, firefox
   bind = $mainMod SHIFT, T, exec, thunderbird-beta
   bind = $mainMod, Z, exec, fuzzel
-  bind = $mainMod SHIFT, Z, exec, $HOME/.dotfiles/bin/slock
+  bind = $mainMod SHIFT, Z, exec, ~/.dotfiles/bin/slock
   bind = $mainMod SHIFT, P, pseudo, # dwindle
 
 # Move focus with mainMod + arrow keys
@@ -87,7 +87,7 @@ bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyp
   binde = $mainMod CONTROL, j, resizeactive, 0 30
 
 # Screenshots
-  bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+  bind = , Print, exec, grim -t jpeg "~/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
 
 # Media player
   bind = , XF86AudioPrev, exec, playerctl previous
