fix: enable numlock by default in hyprland.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -50,6 +50,9 @@ input {
     kb_model = pc104
     kb_options = grp:alt_space_toggle,caps:swapescape,eurosign:e
     kb_rules =
+
+    numlock_by_default = true
+
     repeat_delay = 200
     repeat_rate = 32
 
