--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -1,90 +1,90 @@
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+$mod = SUPER
 $myterm = kitty
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
-  bind = $mainMod, Q, killactive,
-  bind = $mainMod, escape, exec, tschuss
-  bind = $mainMod, T, togglefloating,
+  bind = $mod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
+  bind = $mod, Q, killactive,
+  bind = $mod, escape, exec, tschuss
+  bind = $mod, T, togglefloating,
 
-  bind = $mainMod SHIFT, W, exec, qutebrowser
-  bind = $mainMod CONTROL, W, exec, firefox
-  bind = $mainMod SHIFT, T, exec, thunderbird-beta
-  bind = $mainMod, Z, exec, fuzzel
-  bind = $mainMod SHIFT, Z, exec, ~/.dotfiles/bin/slock
-  bind = $mainMod SHIFT, P, pseudo, # dwindle
+  bind = $mod SHIFT, W, exec, qutebrowser
+  bind = $mod CONTROL, W, exec, firefox
+  bind = $mod SHIFT, T, exec, thunderbird-beta
+  bind = $mod, Z, exec, fuzzel
+  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
+  bind = $mod SHIFT, P, pseudo, # dwindle
 
 # Move focus with mainMod + arrow keys
-  bind = $mainMod, H, movefocus, l
-  bind = $mainMod, left, movefocus, l
-  bind = $mainMod, L, movefocus, r
-  bind = $mainMod, right, movefocus, r
-  bind = $mainMod, K, movefocus, u
-  bind = $mainMod, up, movefocus, u
-  bind = $mainMod, J, movefocus, d
-  bind = $mainMod, down, movefocus, d
-  bind = $mainMod, F, fullscreen
+  bind = $mod, H, movefocus, l
+  bind = $mod, left, movefocus, l
+  bind = $mod, L, movefocus, r
+  bind = $mod, right, movefocus, r
+  bind = $mod, K, movefocus, u
+  bind = $mod, up, movefocus, u
+  bind = $mod, J, movefocus, d
+  bind = $mod, down, movefocus, d
+  bind = $mod, F, fullscreen
 
 # Move windows
-  bind = $mainMod SHIFT, H, movewindow, l
-  bind = $mainMod SHIFT, L, movewindow, r
-  bind = $mainMod SHIFT, K, movewindow, u
-  bind = $mainMod SHIFT, J, movewindow, d
+  bind = $mod SHIFT, H, movewindow, l
+  bind = $mod SHIFT, L, movewindow, r
+  bind = $mod SHIFT, K, movewindow, u
+  bind = $mod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
-  bind = $mainMod, 1, workspace, 1
-  bind = $mainMod, 2, workspace, 2
-  bind = $mainMod, 3, workspace, 3
-  bind = $mainMod, 4, workspace, 4
-  bind = $mainMod, 5, workspace, 5
-  bind = $mainMod, 6, workspace, 6
-  bind = $mainMod, 7, workspace, 7
-  bind = $mainMod, 8, workspace, 8
-  bind = $mainMod, 9, workspace, 9
-  bind = $mainMod, 0, workspace, 10
+  bind = $mod, 1, workspace, 1
+  bind = $mod, 2, workspace, 2
+  bind = $mod, 3, workspace, 3
+  bind = $mod, 4, workspace, 4
+  bind = $mod, 5, workspace, 5
+  bind = $mod, 6, workspace, 6
+  bind = $mod, 7, workspace, 7
+  bind = $mod, 8, workspace, 8
+  bind = $mod, 9, workspace, 9
+  bind = $mod, 0, workspace, 10
 
 # Scratchpad
-  bind = $mainMod SHIFT, M, movetoworkspacesilent, special
-  bind = $mainMod, M, togglespecialworkspace
+  bind = $mod SHIFT, M, movetoworkspacesilent, special
+  bind = $mod, M, togglespecialworkspace
 
 # Move active workspace to monitor to the left/right
-  bind = $mainMod, P, movecurrentworkspacetomonitor, r
-  bind = $mainMod, O, movecurrentworkspacetomonitor, l
+  bind = $mod, P, movecurrentworkspacetomonitor, r
+  bind = $mod, O, movecurrentworkspacetomonitor, l
 
 # Move active window to workspace to the left/right
-  bind = $mainMod SHIFT, P, movetoworkspace, +1
-  bind = $mainMod SHIFT, O, movetoworkspace, -1
+  bind = $mod SHIFT, P, movetoworkspace, +1
+  bind = $mod SHIFT, O, movetoworkspace, -1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-  bind = $mainMod SHIFT, 1, movetoworkspace, 1
-  bind = $mainMod SHIFT, 2, movetoworkspace, 2
-  bind = $mainMod SHIFT, 3, movetoworkspace, 3
-  bind = $mainMod SHIFT, 4, movetoworkspace, 4
-  bind = $mainMod SHIFT, 5, movetoworkspace, 5
-  bind = $mainMod SHIFT, 6, movetoworkspace, 6
-  bind = $mainMod SHIFT, 7, movetoworkspace, 7
-  bind = $mainMod SHIFT, 8, movetoworkspace, 8
-  bind = $mainMod SHIFT, 9, movetoworkspace, 9
-  bind = $mainMod SHIFT, 0, movetoworkspace, 10
+  bind = $mod SHIFT, 1, movetoworkspace, 1
+  bind = $mod SHIFT, 2, movetoworkspace, 2
+  bind = $mod SHIFT, 3, movetoworkspace, 3
+  bind = $mod SHIFT, 4, movetoworkspace, 4
+  bind = $mod SHIFT, 5, movetoworkspace, 5
+  bind = $mod SHIFT, 6, movetoworkspace, 6
+  bind = $mod SHIFT, 7, movetoworkspace, 7
+  bind = $mod SHIFT, 8, movetoworkspace, 8
+  bind = $mod SHIFT, 9, movetoworkspace, 9
+  bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-  bind = $mainMod, mouse_down, workspace, e+1
-  bind = $mainMod, mouse_up, workspace, e-1
+  bind = $mod, mouse_down, workspace, e+1
+  bind = $mod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-  bindm = $mainMod, mouse:272, movewindow
-  bindm = $mainMod, mouse:273, resizewindow
+  bindm = $mod, mouse:272, movewindow
+  bindm = $mod, mouse:273, resizewindow
 
-  binde = $mainMod CONTROL, right, resizeactive, 30 0
-  binde = $mainMod CONTROL, l, resizeactive, 30 0
-  binde = $mainMod CONTROL, left, resizeactive, -30 0
-  binde = $mainMod CONTROL, h, resizeactive, -30 0
-  binde = $mainMod CONTROL, up, resizeactive, 0 -30
-  binde = $mainMod CONTROL, k, resizeactive, 0 -30
-  binde = $mainMod CONTROL, down, resizeactive, 0 30
-  binde = $mainMod CONTROL, j, resizeactive, 0 30
+  binde = $mod CONTROL, right, resizeactive, 30 0
+  binde = $mod CONTROL, l, resizeactive, 30 0
+  binde = $mod CONTROL, left, resizeactive, -30 0
+  binde = $mod CONTROL, h, resizeactive, -30 0
+  binde = $mod CONTROL, up, resizeactive, 0 -30
+  binde = $mod CONTROL, k, resizeactive, 0 -30
+  binde = $mod CONTROL, down, resizeactive, 0 30
+  binde = $mod CONTROL, j, resizeactive, 0 30
 
 # Screenshots
   bind = , Print, exec, grim -t jpeg "~/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
@@ -95,23 +95,23 @@ bind = $mainMod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyp
   bind = , XF86AudioPlay, exec, playerctl play-pause
   bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
   bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
-  bind = $mainMod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+  bind = $mod CONTROL, 0, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
   bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-  bind = $mainMod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-  bind = $mainMod CONTROL, M, exec, $myterm --class=wm-floating-big ncmpcpp
-  bind = $mainMod CONTROL, P, exec, playerctl play-pause
-  bind = $mainMod CONTROL, S, exec, playerctl stop
-  bind = $mainMod CONTROL, Z, exec, mpc random
-  bind = $mainMod CONTROL, period, exec, playerctl next
-  bind = $mainMod CONTROL, comma, exec, playerctl previous
+  bind = $mod CONTROL, 9, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+  bind = $mod CONTROL, M, exec, $myterm --class=wm-floating-big ncmpcpp
+  bind = $mod CONTROL, P, exec, playerctl play-pause
+  bind = $mod CONTROL, S, exec, playerctl stop
+  bind = $mod CONTROL, Z, exec, mpc random
+  bind = $mod CONTROL, period, exec, playerctl next
+  bind = $mod CONTROL, comma, exec, playerctl previous
 
 # Brightness
   bind = , XF86MonBrightnessUp, exec, brightness+
   bind = , XF86MonBrightnessDown, exec, brightness-
 
 # Monitor off
-  bind = $mainMod, F8, exec, swayidle -w timeout 1 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on; pkill -nx swayidle'
+  bind = $mod, F8, exec, swayidle -w timeout 1 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on; pkill -nx swayidle'
 
 # Applications
-bind = $mainMod SHIFT, E, exec, neovide
-bind = $mainMod SHIFT, S, exec, ~/.dotfiles/bin/ambientsound
+bind = $mod SHIFT, E, exec, neovide
+bind = $mod SHIFT, S, exec, ~/.dotfiles/bin/ambientsound
