--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,6 +12,7 @@ scrollback_pager        less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_N
 allow_remote_control    yes
 listen_on               unix:/tmp/kitty
 enabled_layouts         all
+remember_window_size    no
 
 include                 ~/.cache/wal/colors-kitty.conf
 background              #000000
