fix: add GDK_BACKEND to hyprland.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -31,6 +31,7 @@ exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl 
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
+env = GDK_BACKEND,wayland
 
 # Remove stupid anime wallpaper
 misc {
