fix: center gaia sky window.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -4,11 +4,13 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-# Applications to workspaces with window rules
+# Global classes
 windowrule = float,^(wm-floating)$
 windowrule = float,^(wm-floating-big)$
 windowrule = size 1680 920,^(wm-floating-big)$
 windowrule = center,^(wm-floating-big)$
+
+# Applications to workspaces with window rules
 windowrule = workspace 2, ^(.*qutebrowser.*)$
 windowrule = workspace 2, ^(.*firefox.*)$
 windowrule = workspace 2, ^(.*Thorium-browser.*)$
@@ -23,3 +25,7 @@ windowrule = workspace 9, ^(.*zoom.*)$
 windowrule = workspace 9, ^(.*telegram-desktop.*)$
 windowrule = workspace 9, ^(.*discord.*)$
 windowrule = workspace 9, ^(.*Signal.*)$
+
+# Positions
+windowrule = float,^(Gaia Sky)$
+windowrule = center,^(Gaia Sky)$
