--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -32,6 +32,7 @@ exec-once = swayidle -w timeout 300 "hyprctl dispatch dpms off" resume "hyprctl 
 env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland
+env = _JAVA_AWT_WM_NONREPARENTING,1
 
 # Remove stupid anime wallpaper
 misc {
