feat: add a couple of window rules.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -29,3 +29,7 @@ windowrule = workspace 9, ^(.*Signal.*)$
 # Positions
 windowrule = float,^(Gaia Sky)$
 windowrule = center,^(Gaia Sky)$
+windowrule = float,^(blueman-manager)$
+windowrule = center,^(blueman-manager)$
+windowrule = float,^(nm-connection-editor)$
+windowrule = center,^(nm-connection-editor)$
