feat: improve tschuss config.

--- a/tschuss/tschuss.conf
+++ b/tschuss/tschuss.conf
@@ -16,7 +16,7 @@ shutdown: {
         width = 64;
         height = 64;
     };
-    description = "shutDown";
+    description = "shut(d)own";
     action = "shutdown now";
     bind = 100;     // 'd'
 };
@@ -29,7 +29,7 @@ reboot: {
         width = 64;
         height = 64;
     };
-    description = "Reboot";
+    description = "(r)eboot";
     action = "reboot";
     bind = 114;     // 'r'
 };
@@ -42,7 +42,7 @@ logout: {
         width = 64;
         height = 64;
     };
-    description = "lOgout";
+    description = "l(o)gout";
     action = "hyprctl dispatch exit";
     bind = 111;     // 'o'
 };
@@ -55,7 +55,7 @@ hibernate: {
         width = 64;
         height = 64;
     };
-    description = "Hibernate";
+    description = "(h)ibernate";
     action = "systemctl hibernate";
     bind = 104;     // 'h'
 };
@@ -68,9 +68,9 @@ suspend: {
         width = 64;
         height = 64;
     };
-    description = "sUspend";
+    description = "(s)uspend";
     action = "systemctl suspend";
-    bind = 117;     // 'u'
+    bind = 115;     // 's'
 };  
 
 lock: {
@@ -81,7 +81,7 @@ lock: {
         width = 64;
         height = 64;
     };
-    description = "Lock";
+    description = "(l)ock";
     action = "swaylock";
     bind = 108;     // 'l'
 };
