feat: add fuzzel calculator and pass modes.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -13,6 +13,8 @@ $myterm = kitty
   bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, T, exec, thunderbird-beta
   bind = $mod, Z, exec, fuzzel
+  bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
+  bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
   bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
   bind = $mod SHIFT, P, pseudo, # dwindle
 
