--- a/tschuss/tschuss.conf
+++ b/tschuss/tschuss.conf
@@ -17,7 +17,7 @@ shutdown: {
         height = 64;
     };
     description = "shut(d)own";
-    action = "shutdown now";
+    action = "systemctl poweroff";
     bind = 100;     // 'd'
 };
 
@@ -30,7 +30,7 @@ reboot: {
         height = 64;
     };
     description = "(r)eboot";
-    action = "reboot";
+    action = "systemctl reboot";
     bind = 114;     // 'r'
 };
 
