--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,4 +1,4 @@
-dpi-aware=no
+dpi-aware=yes
 icon-theme=Numix-Circle
 width=25
 font=Hack:weight=bold:size=20
@@ -17,4 +17,4 @@ border=151515ff
 radius=30
 
 [dmenu]
-exit-immediately-if-empty=yes
+exit-immediately-if-empty=no
