--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,20 +1,24 @@
 dpi-aware=yes
 icon-theme=Numix-Circle
 width=25
-font=Hack:weight=bold:size=20
+font=Hack:weight=normal:size=15
 line-height=30
 lines=20
 fields=name,generic,comment,categories,filename,keywords
-terminal=foot -e
+terminal=kitty
 prompt="❯   " 
 layer=overlay
 [colors]
-background=000000cf
-selection=013205ff
-border=151515ff
+background=000000df
+text=f8f8f2ff
+selection-text=f8f8f2ff
+match=5984ffff
+selection-match=ff8459ff
+selection=113388ff
+border=5984ffff
 
 [border]
-radius=30
+radius=20
 
 [dmenu]
 exit-immediately-if-empty=no
