--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -13,10 +13,17 @@ $myterm = kitty
   bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, T, exec, thunderbird-beta
   bind = $mod, Z, exec, fuzzel
-  bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
-  bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
-  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
   bind = $mod SHIFT, P, pseudo, # dwindle
+
+# Fuzzel
+  # Launcher
+  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
+  # Calculator
+  bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
+  # Pass
+  bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
+  # Translate
+  bind = $mod, minus, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
 
 # Move focus with mainMod + arrow keys
   bind = $mod, H, movefocus, l
