feat: bindings to fuzzel.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -12,18 +12,22 @@ $myterm = kitty
   bind = $mod SHIFT, W, exec, qutebrowser
   bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, T, exec, thunderbird-beta
-  bind = $mod, Z, exec, fuzzel
   bind = $mod SHIFT, P, pseudo, # dwindle
+
+# Lock
+  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
 
 # Fuzzel
   # Launcher
-  bind = $mod SHIFT, Z, exec, ~/.dotfiles/bin/slock
+  bind = $mod, Z, exec, fuzzel
+  # Translate
+  bind = $mod, X, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
   # Calculator
   bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
+  bind = $mod, C, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
   # Pass
   bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
-  # Translate
-  bind = $mod, minus, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
+  bind = $mod, V, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
 
 # Move focus with mainMod + arrow keys
   bind = $mod, H, movefocus, l
@@ -55,8 +59,8 @@ $myterm = kitty
   bind = $mod, 0, workspace, 10
 
 # Scratchpad
-  bind = $mod SHIFT, M, movetoworkspacesilent, special
-  bind = $mod, M, togglespecialworkspace
+  bind = $mod SHIFT, minus, movetoworkspacesilent, special
+  bind = $mod, minus, togglespecialworkspace
 
 # Move active workspace to monitor to the left/right
   bind = $mod, P, movecurrentworkspacetomonitor, r
