fix: wrong assign.

--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -8,5 +8,5 @@ env = WLR_NO_HARDWARE_CURSORS,1
 source = ~/.dotfiles/hyprland/hyprland.conf
 
 # Disable GPU in qutebrowser
-unbind = $mainMod SHIFT, W
-bind = $mainMod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
+unbind = $mod SHIFT, W
+bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag disable-gpu
