--- a/i3blocks/config
+++ b/i3blocks/config
@@ -36,7 +36,7 @@ color=#ffffff
 background=#000000
 full_text=
 separator=false
-separator_block_width=10
+separator_block_width=5
 
 # [window title]
 # command=xdotool getactivewindow getwindowname
