feat: add ori playlist and move window rules to v2 in hyprland.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -4,32 +4,38 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+# Do not focus any new window
+windowrulev2 = noinitialfocus, class:.*
+
 # Global classes
-windowrule = float,^(wm-floating)$
-windowrule = float,^(wm-floating-big)$
-windowrule = size 1680 920,^(wm-floating-big)$
-windowrule = center,^(wm-floating-big)$
+windowrulev2 = float,class:(wm-floating)
+windowrulev2 = center,class:(wm-floating)
+
+windowrulev2 = float,class:(wm-floating-big)
+windowrulev2 = size 1680 920,class:(wm-floating-big)
+windowrulev2 = center,class:(wm-floating-big)
 
 # Applications to workspaces with window rules
-windowrule = workspace 2, ^(.*qutebrowser.*)$
-windowrule = workspace 2, ^(.*firefox.*)$
-windowrule = workspace 2, ^(.*Thorium-browser.*)$
-windowrule = workspace 3, ^(.*Thunderbird.*)$
-windowrule = workspace 3, ^(.*thunderbird-beta.*)$
-windowrule = workspace 3, ^(.*Mail.*)$
-windowrule = workspace 4, ^(.*jetbrains-idea-ce.*)$
-windowrule = workspace 5, ^(.*steam.*)$
-windowrule = workspace 5, ^(.*steamwebhelper.*)$
-windowrule = workspace 6, ^(.*FreeTube.*)$
-windowrule = workspace 9, ^(.*zoom.*)$
-windowrule = workspace 9, ^(.*telegram-desktop.*)$
-windowrule = workspace 9, ^(.*discord.*)$
-windowrule = workspace 9, ^(.*Signal.*)$
+windowrulev2 = workspace 2,class:(.*qutebrowser.*)
+windowrulev2 = workspace 2,class:(.*firefox.*)
+windowrulev2 = workspace 2,class:(.*Thorium-browser.*)
+windowrulev2 = workspace 3,class:(.*Thunderbird.*)
+windowrulev2 = workspace 3,class:(.*thunderbird-beta.*)
+windowrulev2 = workspace 3,class:(.*Mail.*)
+windowrulev2 = workspace 4,class:(.*jetbrains-idea-ce.*)
+windowrulev2 = workspace 5,class:(.*steam.*)
+windowrulev2 = workspace 5,class:(.*steamwebhelper.*)
+windowrulev2 = workspace 6,class:(.*FreeTube.*)
+windowrulev2 = workspace 9,class:(.*zoom.*)
+windowrulev2 = workspace 9,class:(.*telegram-desktop.*)
+windowrulev2 = workspace 9,class:(.*discord.*)
+windowrulev2 = workspace 9,class:(.*Signal.*)
 
 # Positions
-windowrule = float,^(Gaia Sky)$
-windowrule = center,^(Gaia Sky)$
-windowrule = float,^(blueman-manager)$
-windowrule = center,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-windowrule = center,^(nm-connection-editor)$
+windowrulev2 = float,class:(Gaia Sky)
+windowrulev2 = center,class:(Gaia Sky)
+windowrulev2 = bordercolor rgb(33BC44),class:(Gaia Sky)
+windowrulev2 = float,class:(blueman-manager)
+windowrulev2 = center,class:(blueman-manager)
+windowrulev2 = float,class:(nm-connection-editor)
+windowrulev2 = center,class:(nm-connection-editor)
