fix: silent new windows.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -4,9 +4,6 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-# Do not focus any new window
-windowrulev2 = noinitialfocus, class:.*
-
 # Global classes
 windowrulev2 = float,class:(wm-floating)
 windowrulev2 = center,class:(wm-floating)
@@ -16,20 +13,20 @@ windowrulev2 = size 1680 920,class:(wm-floating-big)
 windowrulev2 = center,class:(wm-floating-big)
 
 # Applications to workspaces with window rules
-windowrulev2 = workspace 2,class:(.*qutebrowser.*)
-windowrulev2 = workspace 2,class:(.*firefox.*)
-windowrulev2 = workspace 2,class:(.*Thorium-browser.*)
-windowrulev2 = workspace 3,class:(.*Thunderbird.*)
-windowrulev2 = workspace 3,class:(.*thunderbird-beta.*)
-windowrulev2 = workspace 3,class:(.*Mail.*)
-windowrulev2 = workspace 4,class:(.*jetbrains-idea-ce.*)
-windowrulev2 = workspace 5,class:(.*steam.*)
-windowrulev2 = workspace 5,class:(.*steamwebhelper.*)
-windowrulev2 = workspace 6,class:(.*FreeTube.*)
-windowrulev2 = workspace 9,class:(.*zoom.*)
-windowrulev2 = workspace 9,class:(.*telegram-desktop.*)
-windowrulev2 = workspace 9,class:(.*discord.*)
-windowrulev2 = workspace 9,class:(.*Signal.*)
+windowrulev2 = workspace 2 silent,class:(.*qutebrowser.*)
+windowrulev2 = workspace 2 silent,class:(.*firefox.*)
+windowrulev2 = workspace 2 silent,class:(.*Thorium-browser.*)
+windowrulev2 = workspace 3 silent,class:(.*Thunderbird.*)
+windowrulev2 = workspace 3 silent,class:(.*thunderbird-beta.*)
+windowrulev2 = workspace 3 silent,class:(.*Mail.*)
+windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea-ce.*)
+windowrulev2 = workspace 5 silent,class:(.*steam.*)
+windowrulev2 = workspace 5 silent,class:(.*steamwebhelper.*)
+windowrulev2 = workspace 6 silent,class:(.*FreeTube.*)
+windowrulev2 = workspace 9 silent,class:(.*zoom.*)
+windowrulev2 = workspace 9 silent,class:(.*telegram-desktop.*)
+windowrulev2 = workspace 9 silent,class:(.*discord.*)
+windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
 # Positions
 windowrulev2 = float,class:(Gaia Sky)
